Smoothen transition of protus vs disk in contrast enhanced images